compiler/test-data/parser/backend/errors/field_without_init.frel
module backend.errors.field_without_init

backend Counter {
    count : i32
}
